Fixes slideshow overflow on mobile & tablet

--- a/ares/styles/styles.css
+++ b/ares/styles/styles.css
@@ -3404,7 +3404,7 @@ input#address-input {
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     .carousel-container,
     .carousel-slide .image-wrapper img {
         height: 200px;
